# WBB-demo

./: .gitignore  README.md  architecture_overview.html  pyproject.toml
config/: README.md  fundamental_factors.json  global_metrics.json  macro_indicators.json  macro_raw_to_factors.json
data/: README.md
data/cola/: README.md
data/macro/: README.md
data/macro/raw/: Macro-indicators.csv  (+2 more)
data/moutai/: README.md
data/txrh/: README.md
docs/: DATA_FLOW.md  DESIGN.md  REQUIREMENTS.md  architecture.md
factors/: README.md
factors/macro/: README.md
factors/moutai/: README.md
prompts/qualitative_subagent/: README.md  step_01_business_model.md  step_02_financials_overview.md  step_03_select_factors.md  step_04_evidence_by_quarter.md  step_05_score_factors.md
tests/: test_agent_and_synthesis.py  test_kernels_and_fm.py  test_moutai_synthetic_chart.py  test_pe_macro_qual.py  test_quant_extract_merge.py
valuations/: README.md
valuations/moutai/: README.md
value_investment_agent/: __init__.py
value_investment_agent/agent/: __init__.py
value_investment_agent/agents/: __init__.py  llm_client.py  qualitative.py  retrieval.py
value_investment_agent/backtest/: __init__.py  visualize.py
value_investment_agent/config/: __init__.py  symbols.py
value_investment_agent/eval/: __init__.py  baselines.py  metrics.py
value_investment_agent/examples/: __init__.py  smoke_demo.py
value_investment_agent/factor_pipeline/: __init__.py  intrinsic_series.py  llm_provider.py  llm_qualitative.py
value_investment_agent/factors/: __init__.py  llm_schemas.py  schemas.py
(+86 files in other folders)
